NodeTemplateParser.py
# Generated from C:/Users/ac1222/OneDrive - Coventry University/GitHub/genAT\NodeTemplate.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing import TextIO
import sys




class NodeTemplateParser ( Parser ):

    grammarFileName = "NodeTemplate.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'#'", "'/'", "'@'", "'['", "']'", 
                     "'|'", "'AND'", "'OR'", "'SAND'", "'NET'", "'ECU'", 
                     "'AP'", "<INVALID>", "'..'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "AND", "OR", "SAND", "NET", "ECU", "AP", "NAME", "DCOLON", 
                      "WS" ]

    RULE_tree_node = 0
    RULE_param = 1
    RULE_variable = 2
    RULE_vartype = 3
    RULE_diffVar = 4
    RULE_diffConstant = 5
    RULE_net = 6
    RULE_glist = 7
    RULE_unassigned_list = 8
    RULE_assigned_list = 9
    RULE_netVariable = 10
    RULE_ecuVariable = 11
    RULE_listVariable = 12
    RULE_constant = 13
    RULE_netConstant = 14
    RULE_ecuConstant = 15

    ruleNames =  [ "tree_node", "param", "variable", "vartype", "diffVar", 
                   "diffConstant", "net", "glist", "unassigned_list", "assigned_list", 
                   "netVariable", "ecuVariable", "listVariable", "constant", 
                   "netConstant", "ecuConstant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    AND=8
    OR=9
    SAND=10
    NET=11
    ECU=12
    AP=13
    NAME=14
    DCOLON=15
    WS=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Tree_nodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(NodeTemplateParser.NAME, 0)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NodeTemplateParser.ParamContext)
            else:
                return self.getTypedRuleContext(NodeTemplateParser.ParamContext,i)


        def getRuleIndex(self):
            return NodeTemplateParser.RULE_tree_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTree_node" ):
                listener.enterTree_node(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTree_node" ):
                listener.exitTree_node(self)




    def tree_node(self):

        localctx = NodeTemplateParser.Tree_nodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tree_node)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(NodeTemplateParser.NAME)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NodeTemplateParser.T__3) | (1 << NodeTemplateParser.T__4) | (1 << NodeTemplateParser.NAME))) != 0):
                self.state = 33
                self.param()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(NodeTemplateParser.VariableContext,0)


        def glist(self):
            return self.getTypedRuleContext(NodeTemplateParser.GlistContext,0)


        def constant(self):
            return self.getTypedRuleContext(NodeTemplateParser.ConstantContext,0)


        def getRuleIndex(self):
            return NodeTemplateParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = NodeTemplateParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_param)
        try:
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NodeTemplateParser.NAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.variable()
                pass
            elif token in [NodeTemplateParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.glist()
                pass
            elif token in [NodeTemplateParser.T__3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.constant()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(NodeTemplateParser.NAME, 0)

        def vartype(self):
            return self.getTypedRuleContext(NodeTemplateParser.VartypeContext,0)


        def net(self):
            return self.getTypedRuleContext(NodeTemplateParser.NetContext,0)


        def diffVar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NodeTemplateParser.DiffVarContext)
            else:
                return self.getTypedRuleContext(NodeTemplateParser.DiffVarContext,i)


        def diffConstant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NodeTemplateParser.DiffConstantContext)
            else:
                return self.getTypedRuleContext(NodeTemplateParser.DiffConstantContext,i)


        def getRuleIndex(self):
            return NodeTemplateParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)




    def variable(self):

        localctx = NodeTemplateParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(NodeTemplateParser.NAME)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==NodeTemplateParser.T__0:
                self.state = 45
                self.match(NodeTemplateParser.T__0)
                self.state = 46
                self.vartype()


            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==NodeTemplateParser.T__1:
                self.state = 49
                self.match(NodeTemplateParser.T__1)
                self.state = 52
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [NodeTemplateParser.NAME]:
                    self.state = 50
                    self.diffVar()
                    pass
                elif token in [NodeTemplateParser.T__3]:
                    self.state = 51
                    self.diffConstant()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==NodeTemplateParser.T__2:
                self.state = 59
                self.match(NodeTemplateParser.T__2)
                self.state = 60
                self.net()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NET(self):
            return self.getToken(NodeTemplateParser.NET, 0)

        def ECU(self):
            return self.getToken(NodeTemplateParser.ECU, 0)

        def AP(self):
            return self.getToken(NodeTemplateParser.AP, 0)

        def getRuleIndex(self):
            return NodeTemplateParser.RULE_vartype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVartype" ):
                listener.enterVartype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVartype" ):
                listener.exitVartype(self)




    def vartype(self):

        localctx = NodeTemplateParser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vartype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << NodeTemplateParser.NET) | (1 << NodeTemplateParser.ECU) | (1 << NodeTemplateParser.AP))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiffVarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(NodeTemplateParser.NAME, 0)

        def getRuleIndex(self):
            return NodeTemplateParser.RULE_diffVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiffVar" ):
                listener.enterDiffVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiffVar" ):
                listener.exitDiffVar(self)




    def diffVar(self):

        localctx = NodeTemplateParser.DiffVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_diffVar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(NodeTemplateParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiffConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(NodeTemplateParser.NAME, 0)

        def getRuleIndex(self):
            return NodeTemplateParser.RULE_diffConstant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiffConstant" ):
                listener.enterDiffConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiffConstant" ):
                listener.exitDiffConstant(self)




    def diffConstant(self):

        localctx = NodeTemplateParser.DiffConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_diffConstant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(NodeTemplateParser.T__3)
            self.state = 68
            self.match(NodeTemplateParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def netConstant(self):
            return self.getTypedRuleContext(NodeTemplateParser.NetConstantContext,0)


        def netVariable(self):
            return self.getTypedRuleContext(NodeTemplateParser.NetVariableContext,0)


        def getRuleIndex(self):
            return NodeTemplateParser.RULE_net

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNet" ):
                listener.enterNet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNet" ):
                listener.exitNet(self)




    def net(self):

        localctx = NodeTemplateParser.NetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_net)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NodeTemplateParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.netConstant()
                pass
            elif token in [NodeTemplateParser.NAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.netVariable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assigned_list(self):
            return self.getTypedRuleContext(NodeTemplateParser.Assigned_listContext,0)


        def unassigned_list(self):
            return self.getTypedRuleContext(NodeTemplateParser.Unassigned_listContext,0)


        def getRuleIndex(self):
            return NodeTemplateParser.RULE_glist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlist" ):
                listener.enterGlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlist" ):
                listener.exitGlist(self)




    def glist(self):

        localctx = NodeTemplateParser.GlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_glist)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.assigned_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.unassigned_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unassigned_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DCOLON(self):
            return self.getToken(NodeTemplateParser.DCOLON, 0)

        def ecuVariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NodeTemplateParser.EcuVariableContext)
            else:
                return self.getTypedRuleContext(NodeTemplateParser.EcuVariableContext,i)


        def ecuConstant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NodeTemplateParser.EcuConstantContext)
            else:
                return self.getTypedRuleContext(NodeTemplateParser.EcuConstantContext,i)


        def getRuleIndex(self):
            return NodeTemplateParser.RULE_unassigned_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnassigned_list" ):
                listener.enterUnassigned_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnassigned_list" ):
                listener.exitUnassigned_list(self)




    def unassigned_list(self):

        localctx = NodeTemplateParser.Unassigned_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_unassigned_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(NodeTemplateParser.T__4)
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NodeTemplateParser.NAME]:
                self.state = 79
                self.ecuVariable()
                pass
            elif token in [NodeTemplateParser.T__3]:
                self.state = 80
                self.ecuConstant()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 83
            self.match(NodeTemplateParser.DCOLON)
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [NodeTemplateParser.NAME]:
                self.state = 84
                self.ecuVariable()
                pass
            elif token in [NodeTemplateParser.T__3]:
                self.state = 85
                self.ecuConstant()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 88
            self.match(NodeTemplateParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assigned_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ecuVariable(self):
            return self.getTypedRuleContext(NodeTemplateParser.EcuVariableContext,0)


        def listVariable(self):
            return self.getTypedRuleContext(NodeTemplateParser.ListVariableContext,0)


        def getRuleIndex(self):
            return NodeTemplateParser.RULE_assigned_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssigned_list" ):
                listener.enterAssigned_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssigned_list" ):
                listener.exitAssigned_list(self)




    def assigned_list(self):

        localctx = NodeTemplateParser.Assigned_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assigned_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(NodeTemplateParser.T__4)
            self.state = 91
            self.ecuVariable()
            self.state = 92
            self.match(NodeTemplateParser.T__6)
            self.state = 93
            self.listVariable()
            self.state = 94
            self.match(NodeTemplateParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(NodeTemplateParser.NAME, 0)

        def NET(self):
            return self.getToken(NodeTemplateParser.NET, 0)

        def getRuleIndex(self):
            return NodeTemplateParser.RULE_netVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetVariable" ):
                listener.enterNetVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetVariable" ):
                listener.exitNetVariable(self)




    def netVariable(self):

        localctx = NodeTemplateParser.NetVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_netVariable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(NodeTemplateParser.NAME)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==NodeTemplateParser.T__0:
                self.state = 97
                self.match(NodeTemplateParser.T__0)
                self.state = 98
                self.match(NodeTemplateParser.NET)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EcuVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(NodeTemplateParser.NAME, 0)

        def net(self):
            return self.getTypedRuleContext(NodeTemplateParser.NetContext,0)


        def ECU(self):
            return self.getToken(NodeTemplateParser.ECU, 0)

        def AP(self):
            return self.getToken(NodeTemplateParser.AP, 0)

        def getRuleIndex(self):
            return NodeTemplateParser.RULE_ecuVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEcuVariable" ):
                listener.enterEcuVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEcuVariable" ):
                listener.exitEcuVariable(self)




    def ecuVariable(self):

        localctx = NodeTemplateParser.EcuVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ecuVariable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(NodeTemplateParser.NAME)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==NodeTemplateParser.T__0:
                self.state = 102
                self.match(NodeTemplateParser.T__0)
                self.state = 103
                _la = self._input.LA(1)
                if not(_la==NodeTemplateParser.ECU or _la==NodeTemplateParser.AP):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==NodeTemplateParser.T__2:
                self.state = 106
                self.match(NodeTemplateParser.T__2)
                self.state = 107
                self.net()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListVariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(NodeTemplateParser.NAME, 0)

        def getRuleIndex(self):
            return NodeTemplateParser.RULE_listVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListVariable" ):
                listener.enterListVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListVariable" ):
                listener.exitListVariable(self)




    def listVariable(self):

        localctx = NodeTemplateParser.ListVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_listVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(NodeTemplateParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(NodeTemplateParser.NAME, 0)

        def getRuleIndex(self):
            return NodeTemplateParser.RULE_constant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstant" ):
                listener.enterConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstant" ):
                listener.exitConstant(self)




    def constant(self):

        localctx = NodeTemplateParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_constant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(NodeTemplateParser.T__3)
            self.state = 113
            self.match(NodeTemplateParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(NodeTemplateParser.NAME, 0)

        def getRuleIndex(self):
            return NodeTemplateParser.RULE_netConstant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetConstant" ):
                listener.enterNetConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetConstant" ):
                listener.exitNetConstant(self)




    def netConstant(self):

        localctx = NodeTemplateParser.NetConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_netConstant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(NodeTemplateParser.T__3)
            self.state = 116
            self.match(NodeTemplateParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EcuConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(NodeTemplateParser.NAME, 0)

        def getRuleIndex(self):
            return NodeTemplateParser.RULE_ecuConstant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEcuConstant" ):
                listener.enterEcuConstant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEcuConstant" ):
                listener.exitEcuConstant(self)




    def ecuConstant(self):

        localctx = NodeTemplateParser.EcuConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_ecuConstant)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(NodeTemplateParser.T__3)
            self.state = 119
            self.match(NodeTemplateParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





